# labwired-core

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  AGENTS.md  BME280_NRFX_FIX.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEMOS.md  DEVELOPMENT.md  Dockerfile  Dockerfile.ci  FIDELITY.md  README.md  RELEASE_PROCESS.md  RELEASE_READINESS_CHECKLIST.md  ROADMAP.md  SECURITY.md  TRADEMARKS.md  advanced_stm32.json  advanced_stm32.rs  combined_trace.txt  combined_trace_v2.txt  debug_execution.txt  debug_output.txt  demo_chip.rs  detailed_proof.txt  detailed_trace.txt  dummy_stm32.rs  final_debug_trace.txt  final_release_notes.md  full_output.txt  h5-fixed.yaml  index.html  labwired.code-workspace  libadvanced_stm32.rlib  (+17 more)
crates/cli/: Cargo.toml
crates/cli/src/: api_client.rs  artifacts.rs  asset_validation.rs  bus_vcd.rs  component_validation.rs  coverage.rs  faults.rs  gpio_observer.rs  lib.rs  main.rs  manifest.rs  pc_coverage_report.rs  size_limited_writer.rs  tier1.rs  vcd_trace.rs  wifi_frames.rs
crates/cli/tests/: asset_import.rs  breakpoints.rs  bus_trace_export.rs  cli_integration.rs  config_validation.rs  demo_blinky.rs  determinism.rs  e2e_esp32c3_blinky.rs  e2e_h563_uds.rs  e2e_kw41z_cow_stimulus.rs  e2e_leo_airquality.rs  environment_runner.rs  golden_examples.rs  h5_demo.rs  ingest_svd.rs  integration_stress_tests.rs  interactive_snapshot.rs  legacy_schema.rs  machine_advance_fidelity.rs  manifest_reproducible.rs  outputs.rs  riscv_jit_c3_oled_test_differential.rs  riscv_tick_interval_fidelity_differential.rs  snapshots.rs  stop_conditions.rs  svd_coverage_ratchet.rs  tier1_matrix.rs  tier1_matrix_ratchet.rs
crates/core/: Cargo.toml  build.rs
crates/core/benches/: fetch_ips.rs
crates/core/native/: iolink_conformance.c  iolink_device_bridge.c  iolink_device_bridge.h  iolink_master_bridge.c  iolink_master_bridge.h  mlx90640_bridge.c  mlx90640_bridge.h
crates/core/src/: config.rs  cycle_clock.rs  fidelity.rs  hashers.rs  inspect.rs  lib.rs  logic_capture.rs  metrics.rs  multi_core.rs  network.rs  pc_coverage.rs  runtime_snapshot.rs  sim_input.rs  snapshot.rs  tests.rs  trace.rs  vfi.rs  world.rs
crates/core/tests/: analog_stimulus.rs  arch_chip_isolation.rs  bench_walk_free_kw41z.rs  bg770a_validation.rs  board_coverage_ratchet.rs  brom_boot_smoke.rs  bus_word_write.rs  capture_nokia5110_frames.rs  chip_conformance.rs  cosim_contract.rs  diag_c3_yield.rs  diag_esp32_dual_core_boot.rs  diag_esp32c3_boot.rs  diag_esp32c3_panic.rs  diag_esp32s3_boot.rs  diag_esp32s3_l2.rs  e2e_agentdeck_in_sim.rs  e2e_blinky.rs  e2e_epaper_tricolor.rs  e2e_esp32_epaper.rs  e2e_esp32c3_snapshot_resume.rs  e2e_esp32s3_faithful_boot.rs  e2e_external_arduino_esp32_in_sim.rs  e2e_hello_world.rs  e2e_i2c_tmp102.rs  e2e_iolink_dido.rs  e2e_labwired_ereader.rs  e2e_labwired_wifi.rs  e2e_nokia5110_invaders.rs  e2e_nrf52840_proximity.rs  e2e_spi3_dc_epaper.rs  e2e_stm32f407_i2c.rs  egress_e2e.rs  epaper_ssd1680_differential.rs  esp32c3_clamped_full_state_differential.rs  esp32c3_i2c.rs  esp32c3_oled_profile.rs  esp32c3_rtc_slow_calibration.rs  esp32c3_shipped_lab_batch_gate.rs  esp32c3_walk_differential.rs  (+81 more)
crates/dap/: Cargo.toml
crates/dap/src/: adapter.rs  gdb.rs  lib.rs  main.rs  server.rs  trace.rs
crates/dap/tests/: e2e.rs  evaluation.rs  step_operations.rs
crates/egress-relay/: Cargo.toml  relay.example.toml
crates/egress-relay/src/: build.rs  conn.rs  hello.rs  lib.rs  main.rs
crates/firmware-armv7m-benchmark/: Cargo.toml
crates/firmware-ci-fixture/: Cargo.toml  build.rs  minimal.ld
crates/firmware-ci-fixture/src/: main.rs
crates/firmware-f103-conformance/: Cargo.toml
crates/firmware-f103-conformance/src/: main.rs
crates/firmware-f103-fuzztarget/: Cargo.toml  build.rs  link.ld
crates/firmware-f103-fuzztarget/src/: main.rs
crates/firmware-f103-i2c-demo/: Cargo.toml  build.rs  memory.x  minimal.ld
crates/firmware-f103-i2c-demo/src/: main.rs
crates/firmware-f401-demo/: Cargo.toml  memory.x
crates/firmware-f401-demo/src/: main.rs
crates/firmware-f401cdu6-blackpill-demo/: Cargo.toml  memory.x  minimal.ld
crates/firmware-f401cdu6-blackpill-demo/src/: i2c_smoke.rs  main.rs
crates/firmware-f407-demo/: Cargo.toml  build.rs  memory.x  minimal.ld
crates/firmware-f407-demo/src/: i2c.rs  smoke.rs
crates/firmware-h563-fullchip-demo/: Cargo.toml  minimal.ld
crates/firmware-h563-fullchip-demo/src/: main.rs
crates/firmware-h563-io-demo/: Cargo.toml  build.rs
crates/firmware-h563-io-demo/src/: main.rs
crates/firmware-l476-demo/: Cargo.toml  build.rs  cubemx.ld  memory.x  minimal.ld
crates/firmware-l476-demo/src/: cubemx_hal.rs  dma_sdmmc_exti.rs  l4periphs2.rs  main.rs  r12.rs  tim1_advanced.rs
crates/firmware-nrf52840-ble-collector/: Cargo.toml
crates/firmware-nrf52840-ble-collector/src/: main.rs
crates/firmware-nrf52840-ble-rx/: Cargo.toml
crates/firmware-nrf52840-ble-rx/src/: main.rs
crates/firmware-nrf52840-ble-sensor/: Cargo.toml
crates/firmware-nrf52840-ble-sensor/src/: main.rs
crates/firmware-nrf52840-ble-tx/: Cargo.toml
crates/firmware-nrf52840-ble-tx/src/: main.rs
crates/firmware-nrf52840-isr-blinky/: Cargo.toml  build.rs
crates/firmware-nrf52840-isr-blinky/src/: main.rs
crates/firmware-nrf52840-proximity/: Cargo.toml  build.rs
crates/firmware-nrf52840-proximity/src/: main.rs
crates/firmware-nrf52840-timer-blinky/: Cargo.toml
crates/firmware-nrf52840-timer-blinky/src/: main.rs
crates/firmware-rv32i-ci-fixture/: Cargo.toml  memory.x
crates/firmware-stm32f103-uart/: Cargo.toml
crates/gdbstub/: Cargo.toml
crates/gdbstub/src/: lib.rs
crates/gdbstub/tests/: gdb_e2e.rs
crates/hw-oracle/: Cargo.toml
crates/hw-oracle-macros/: Cargo.toml
crates/hw-oracle-macros/src/: lib.rs
crates/hw-oracle-macros/tests/: expand.rs
crates/hw-oracle/src/: arm_thumb.rs  flash.rs  lib.rs  openocd.rs  riscv.rs
crates/hw-oracle/tests/: esp32c3_reset_conformance.rs  esp32s3_reset_conformance.rs  (+28 more)
crates/ir/: Cargo.toml
crates/labwired-flasher/: Cargo.toml
(+3663 files in other folders)
