# LabWired - Firmware Simulation Platform
# Copyright (C) 2026 Andrii Shylenko
#
# This software is released under the MIT License.
# See the LICENSE file in the project root for full license information.

[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/loader",
    "crates/cli",
    "crates/firmware",
    "crates/firmware-ci-fixture",
    "crates/riscv-ci-fixture",
    "crates/config", "crates/dap", "crates/gdbstub",
    "crates/svd-ingestor",
    "examples/arm-cortex-m0",
    "examples/riscv-virt",
    "examples/demo-blinky",
    "crates/hw-trace",
    "crates/hw-runner",
    "crates/hw-oracle",
    "crates/hw-oracle-macros",
]
exclude = ["crates/firmware-hal-test", "examples/esp32s3-hello-world"]
default-members = ["crates/cli", "crates/core", "crates/loader"]

[workspace.package]
version = "0.11.0"
edition = "2021"
authors = ["LabWired Team <team@labwired.io>"]
license = "MIT"
description = "High-performance, declarative firmware simulation engine for ARM Cortex-M and RISC-V."
repository = "https://github.com/w1ne/labwired-core"
homepage = "https://labwired.io"
documentation = "https://docs.labwired.io"
readme = "README.md"
keywords = ["emulator", "embedded", "arm", "riscv", "simulation"]
categories = ["development-tools", "emulators", "embedded-development"]

[workspace.dependencies]
libc = "0.2"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive"] }
goblin = "0.7"
serialport = "4.9"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
bitflags = "2.4"
human-size = "0.4"
serde_json = "1.0"
sha2 = "0.10"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
