# LabWired - Firmware Simulation Platform
# Copyright (C) 2026 Andrii Shylenko
#
# This software is released under the MIT License.
# See the LICENSE file in the project root for full license information.

[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/codegen",
    "crates/config",
    "crates/core",
    "crates/dap",
    "crates/firmware",
    "crates/firmware-ci-fixture",
    "crates/firmware-comparative-benchmark",
    "crates/firmware-esp32c3-demo",
    "crates/firmware-f401-demo",
    "crates/firmware-h563-demo",
    "crates/firmware-h563-fullchip-demo",
    "crates/firmware-h563-io-demo",
    "crates/firmware-hil-showcase",
    "crates/firmware-l476-demo",
    "crates/firmware-nrf52840-demo",
    "crates/firmware-rp2040-demo",
    "crates/firmware-rp2040-pio-onboarding",
    "crates/gdbstub",
    "crates/ir",
    "crates/loader",
    "crates/python",
    "crates/riscv-ci-fixture",
    "crates/svd-ingestor",
    "crates/wasm",
    "examples/arm-cortex-m0",
    "examples/demo-blinky",
    "examples/riscv-virt",
]
# firmware-hal-test is a standalone reference example pinned to stm32f1xx-hal.
# It carries its own [profile.release] (opt-level = "z", lto = true) that is
# incompatible with the workspace profile, so it must build out-of-workspace.
exclude = ["crates/firmware-hal-test"]
default-members = ["crates/cli", "crates/core", "crates/dap", "crates/loader"]

[workspace.package]
version = "0.13.0"
edition = "2021"
authors = ["Andrii Shylenko"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive"] }
goblin = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
bitflags = "2.4"
human-size = "0.4"
serde_json = "1.0"
sha2 = "0.10"
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"
memmap2 = "0.9"
pio = "0.2"
pio-parser = "0.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = false
debug = true

# Per-package release overrides for embedded firmware crates and CI fixtures.
# These build for thumbv*/riscv32 targets and want size-optimized binaries
# (opt-level = "s") with single-codegen-unit for cleaner inlining. Cargo does
# not support globs or inheritance in profile sections, so each crate gets
# its own block. Keep alphabetical.
[profile.release.package.firmware-ci-fixture]
codegen-units = 1
opt-level = "s"

[profile.release.package.firmware-esp32c3-demo]
codegen-units = 1
opt-level = "s"

[profile.release.package.firmware-f401-demo]
codegen-units = 1
opt-level = "s"

[profile.release.package.firmware-h563-demo]
codegen-units = 1
opt-level = "s"

[profile.release.package.firmware-h563-fullchip-demo]
codegen-units = 1
opt-level = "s"

[profile.release.package.firmware-h563-io-demo]
codegen-units = 1
opt-level = "s"

[profile.release.package.firmware-hil-showcase]
codegen-units = 1
opt-level = "s"

[profile.release.package.firmware-l476-demo]
codegen-units = 1
opt-level = "s"

[profile.release.package.firmware-nrf52840-demo]
codegen-units = 1
opt-level = "s"

[profile.release.package.firmware-rp2040-demo]
codegen-units = 1
opt-level = "s"

[profile.release.package.firmware-rp2040-pio-onboarding]
codegen-units = 1
opt-level = "s"

[profile.release.package.riscv-ci-fixture]
codegen-units = 1
opt-level = "s"
