# LabWired - Firmware Simulation Platform
# Copyright (C) 2026 Andrii Shylenko
#
# This software is released under the MIT License.
# See the LICENSE file in the project root for full license information.

[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/codegen",
    "crates/config",
    "crates/core",
    "crates/dap",
    "crates/egress-relay",
    "crates/firmware",
    "crates/firmware-ci-fixture",
    "crates/firmware-comparative-benchmark",
    "crates/firmware-esp32c3-demo",
    "crates/firmware-f103-i2c-demo",
    "crates/firmware-f401-demo",
    "crates/firmware-f103-conformance",
    "crates/firmware-f103-fuzztarget",
    "crates/labwired-fuzz",
    "crates/firmware-f401cdu6-blackpill-demo",
    "crates/firmware-f407-demo",
    "crates/firmware-h563-demo",
    "crates/firmware-h563-fullchip-demo",
    "crates/firmware-h563-io-demo",
    "crates/firmware-hil-showcase",
    "crates/firmware-l073-demo",
    "crates/firmware-l476-demo",
    "crates/firmware-nrf52840-ble-collector",
    "crates/firmware-nrf52840-ble-rx",
    "crates/firmware-nrf52840-ble-sensor",
    "crates/firmware-nrf52840-ble-tx",
    "crates/firmware-nrf52840-conformance",
    "crates/firmware-nrf52840-cpu-conformance",
    "crates/firmware-nrf52840-demo",
    "crates/firmware-nrf52840-isr-blinky",
    "crates/firmware-nrf52840-proximity",
    "crates/firmware-nrf52840-timer-blinky",
    "crates/firmware-rp2040-demo",
    "crates/firmware-kw41z-demo",
    "crates/firmware-kw41z-lcd",
    "crates/firmware-rp2040-pio-onboarding",
    "crates/gdbstub",
    "crates/hw-oracle",
    "crates/hw-oracle-macros",
    "crates/hw-runner",
    "crates/hw-trace",
    "crates/ir",
    "crates/loader",
    "crates/validation-report",
    "crates/python",
    "crates/riscv-ci-fixture",
    "crates/svd-ingestor",
    "crates/wasm",
    "examples/demo-blinky",
    "examples/nucleo-f407-i2c",
    "examples/riscv-virt",
    "examples/adxl345-sensor-lab",
    "examples/ina219-power-lab",
    "examples/ads1115-adc-lab",
    "examples/ds3231-rtc-lab",
    "examples/mpu6050-sensor-lab",
    "examples/vl53l1x-tof-lab",
    "examples/bme280-weather-lab",
    "examples/max31855-thermocouple-lab",
    "examples/ssd1306-hello-lab",
    "examples/neo6m-gps-lab",
    "examples/quectel-bg770a-lab",
    "examples/ntc-thermistor-lab",
    "examples/ili9341-tft-lab",
    "examples/epaper-tricolor-lab",
    "examples/nokia5110-invaders-lab",
    "examples/tier1-fixture/nrf52832",
    "examples/tier1-fixture/nrf52840",
    "examples/tier1-fixture/rp2040",
]
# firmware-hal-test is a standalone reference example pinned to stm32f1xx-hal.
# It carries its own [profile.release] (opt-level = "z", lto = true) that is
# incompatible with the workspace profile, so it must build out-of-workspace.
#
# examples/esp32s3-* and examples/esp32c3-* require the +esp toolchain and live
# entirely outside the standard workspace toolchain.
exclude = [
    "crates/firmware-hal-test",
    "examples/esp32s3-blinky",
    "examples/esp32s3-hello-world",
    "examples/esp32s3-i2c-tmp102",
    "examples/openai-deck-s3",
    "examples/esp32c3-hello-world",
    "examples/esp32-epaper-lab",
    "examples/tier1-fixture/esp32s3",
    "examples/tier1-fixture/esp32",
]
default-members = ["crates/cli", "crates/core", "crates/dap", "crates/loader", "crates/labwired-fuzz"]

[workspace.package]
version = "0.19.2"
edition = "2021"
authors = ["Andrii Shylenko"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive"] }
goblin = "0.7"
libc = "0.2"
serialport = "4.9"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
bitflags = "2.4"
human-size = "0.4"
serde_json = "1.0"
sha2 = "0.10"
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"
memmap2 = "0.9"
pio = "0.2"
pio-parser = "0.2"
ureq = { version = "2.12", features = ["json"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "thin"
debug = true

# Per-package release overrides for embedded firmware crates and CI fixtures.
# These build for thumbv*/riscv32 targets and want size-optimized binaries
# (opt-level = "s") with single-codegen-unit for cleaner inlining. Cargo does
# not support globs or inheritance in profile sections, so each crate gets
# its own block. Keep alphabetical.
[profile.release.package.firmware-ci-fixture]
codegen-units = 1
opt-level = "s"

[profile.release.package.firmware-esp32c3-demo]
codegen-units = 1
opt-level = "s"

[profile.release.package.firmware-f401-demo]
codegen-units = 1
opt-level = "s"

[profile.release.package.firmware-f103-conformance]
codegen-units = 1
opt-level = "s"

[profile.release.package.firmware-f103-fuzztarget]
codegen-units = 1
opt-level = "s"

[profile.release.package.firmware-h563-demo]
codegen-units = 1
opt-level = "s"

[profile.release.package.firmware-h563-fullchip-demo]
codegen-units = 1
opt-level = "s"

[profile.release.package.firmware-h563-io-demo]
codegen-units = 1
opt-level = "s"

[profile.release.package.firmware-hil-showcase]
codegen-units = 1
opt-level = "s"

[profile.release.package.firmware-l476-demo]
codegen-units = 1
opt-level = "s"

[profile.release.package.firmware-nrf52840-conformance]
codegen-units = 1
opt-level = "s"

[profile.release.package.firmware-nrf52840-cpu-conformance]
codegen-units = 1
opt-level = "s"

[profile.release.package.firmware-nrf52840-demo]
codegen-units = 1
opt-level = "s"

[profile.release.package.firmware-rp2040-demo]
codegen-units = 1
opt-level = "s"

[profile.release.package.firmware-kw41z-demo]
codegen-units = 1
opt-level = "s"

[profile.release.package.firmware-kw41z-lcd]
codegen-units = 1
opt-level = "s"

[profile.release.package.firmware-rp2040-pio-onboarding]
codegen-units = 1
opt-level = "s"

[profile.release.package.riscv-ci-fixture]
codegen-units = 1
opt-level = "s"

[profile.release.package.adxl345-sensor-lab]
codegen-units = 1
debug = true
opt-level = "s"

[profile.release.package.ina219-power-lab]
codegen-units = 1
debug = true
opt-level = "s"

[profile.release.package.ads1115-adc-lab]
codegen-units = 1
debug = true
opt-level = "s"

[profile.release.package.ds3231-rtc-lab]
codegen-units = 1
debug = true
opt-level = "s"

[profile.release.package.mpu6050-sensor-lab]
codegen-units = 1
debug = true
opt-level = "s"

[profile.release.package.bme280-weather-lab]
codegen-units = 1
debug = true
opt-level = "s"

[profile.release.package.max31855-thermocouple-lab]
codegen-units = 1
debug = true
opt-level = "s"

[profile.release.package.ssd1306-hello-lab]
codegen-units = 1
debug = true
opt-level = "s"

[profile.release.package.neo6m-gps-lab]
codegen-units = 1
debug = true
opt-level = "s"

[profile.release.package.quectel-bg770a-lab]
codegen-units = 1
debug = true
opt-level = "s"

[profile.release.package.ntc-thermistor-lab]
codegen-units = 1
debug = true
opt-level = "s"

# The browser simulator cdylib (NOT a firmware crate). A single codegen unit
# lets LLVM inline across the whole crate for the wasm hot loop; the compile-time
# cost lands only on this one package. opt-level stays at the release default (3).
# SIMD/bulk-memory target features and the debug-strip live in .cargo/config.toml
# and crates/wasm/Cargo.toml's wasm-pack metadata respectively.
[profile.release.package.labwired-wasm]
codegen-units = 1
