# LabWired - Firmware Simulation Platform
# Copyright (C) 2026 Andrii Shylenko
#
# This software is released under the MIT License.
# See the LICENSE file in the project root for full license information.

[package]
name = "labwired-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
default-run = "labwired"

[[bin]]
name = "labwired"
path = "src/main.rs"

[[bin]]
name = "gen-peripherals-manifest"
path = "src/bin/gen_peripherals_manifest.rs"

[dependencies]
labwired-core = { path = "../core" }
labwired-loader = { path = "../loader" }
labwired-config = { path = "../config" }
labwired-fuzz = { path = "../labwired-fuzz" }
labwired-gdbstub = { path = "../gdbstub" }
labwired-codegen = { path = "../codegen" }
labwired-ir = { path = "../ir", features = ["svd"] }
svd-ingestor = { path = "../svd-ingestor" }
human-size = { workspace = true }
svd-parser = "0.14"
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
vcd = "0.7"
ureq = { workspace = true }

[features]
default = []
# Phase 3.2 JIT pilot (issue #124) — pass-through to labwired-core's `jit`
# feature. Build with `cargo build --release -p labwired-cli --features
# jit-core` to enable the wasmtime-backed RV32IMC JIT.
#
# NOTE: this deliberately does NOT pull in `event-scheduler`. Enabling that
# feature CLI-wide makes scheduler-driven peripherals defer work to events that
# only `Machine::run` drains — the CLI's non-eligible manual step_batch path
# does not, so coupling it here regressed unrelated chips (KW41Z stimulus,
# ESP32/ESP32-S3 tier1 labs). The JIT-eligible C3 path drives `Machine::run` and
# engages the JIT at its fixed tick window regardless of the scheduler, and the
# JIT-on vs JIT-off differential is byte-identical either way (both arms tick
# peripherals identically), so the scheduler is not required for this path.
jit-core = ["labwired-core/jit"]
# Opt-in event scheduler + walk-delete / idle-FF infrastructure used by the
# Arduino matrix speed path (`LABWIRED_MATRIX_SPEED=1`). Build:
#   cargo build -p labwired-cli --release --features event-scheduler
# Do NOT combine with `jit-core` for general CLI use (see note above).
event-scheduler = ["labwired-core/event-scheduler"]
# Swap the built-in fuzzing loop for the LibAFL engine (havoc/splice mutators,
# map-feedback scheduler, crash objectives). Heavy dependency tree, so opt-in:
# `cargo build --release -p labwired-cli --features fuzz-libafl`.
fuzz-libafl = ["labwired-fuzz/libafl"]
