# LabWired - Firmware Simulation Platform
# Copyright (C) 2026 Andrii Shylenko
#
# This software is released under the MIT License.
# See the LICENSE file in the project root for full license information.

[package]
name = "labwired-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
bitflags = { workspace = true }
labwired-config = { path = "../config" }
anyhow = { workspace = true }
serde_json = { workspace = true }
# bincode 1.3 (no extra wasm-bindgen deps; serde-compatible) — used by the
# `runtime_snapshot` module for binary-format mid-flight resume snapshots.
# The JSON `MachineSnapshot` stays in serde_json for the determinism gates.
bincode = "1.3"
goblin = { workspace = true }
labwired-ir = { path = "../ir" }
serde_yaml.workspace = true
memmap2.workspace = true
pio.workspace = true
pio-parser.workspace = true
# Optional: wasmtime is only pulled in when the `jit` feature is enabled.
# The browser crate (`labwired-wasm`) does NOT enable this feature, so
# JS/wasm builds keep their lean dependency tree.
wasmtime = { version = "45", optional = true, default-features = false, features = ["cranelift", "runtime", "std", "wat"] }

[features]
default = []
# Enable end-to-end tests that build and run the examples/esp32s3-* firmware
# crates. Requires the +esp toolchain. Off by default so the standard
# workspace `cargo test` does not need the ESP toolchain installed.
esp32s3-fixtures = []
# Phase 3.2 pilot (issue #124): JIT-compile hot Xtensa basic blocks to wasm,
# run via wasmtime native, side-exit on branch. Off by default — the wasm
# build target and the standard test suite both run on the interpreter.
jit = ["dep:wasmtime"]

[dev-dependencies]
labwired-loader = { path = "../loader" }
