# LabWired - Firmware Simulation Platform
# Copyright (C) 2026 Andrii Shylenko
#
# This software is released under the MIT License.
# See the LICENSE file in the project root for full license information.

[package]
name = "labwired-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
# build.rs compiles the JIT hot-block WAT into wasm bytes at compile time
# so both the native (wasmtime) and browser (`js_sys::WebAssembly`) backends
# consume identical bytes. See `crates/core/build.rs` and
# `cpu/xtensa_jit/wasm_bytes.rs` (#124 Phase 4 browser-side JIT prototype).
build = "build.rs"

[build-dependencies]
# Used solely by build.rs to pre-compile the hot-block WAT into wasm bytes.
wat = "1.0"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
bitflags = { workspace = true }
labwired-config = { path = "../config" }
anyhow = { workspace = true }
serde_json = { workspace = true }
# bincode 1.3 (no extra wasm-bindgen deps; serde-compatible) — used by the
# `runtime_snapshot` module for binary-format mid-flight resume snapshots.
# The JSON `MachineSnapshot` stays in serde_json for the determinism gates.
bincode = "1.3"
# SHA-256 compression for the ESP32-S3 SHA accelerator model (bootloader
# image-hash verification). Used only by the esp32s3 SHA peripheral.
sha2 = { workspace = true, features = ["compress"] }
goblin = { workspace = true }
labwired-ir = { path = "../ir" }
serde_yaml.workspace = true
memmap2.workspace = true
pio.workspace = true
pio-parser.workspace = true
# Optional: wasmtime is only pulled in when the `jit` feature is enabled.
# The browser crate (`labwired-wasm`) does NOT enable this feature, so
# JS/wasm builds keep their lean dependency tree.
wasmtime = { version = "45", optional = true, default-features = false, features = ["cranelift", "runtime", "std", "wat"] }

[features]
default = []
# Enable end-to-end tests that build and run the examples/esp32s3-* firmware
# crates. Requires the +esp toolchain. Off by default so the standard
# workspace `cargo test` does not need the ESP toolchain installed.
esp32s3-fixtures = []
# Phase 3.2 pilot (issue #124): JIT-compile hot Xtensa basic blocks to wasm,
# run via wasmtime native, side-exit on branch. Off by default — the wasm
# build target and the standard test suite both run on the interpreter.
jit = ["dep:wasmtime"]
# Phase 2B.1 (issue #192): event-driven peripheral scheduler. The
# scheduler types (`crates/core/src/sched/`) and the `Peripheral` trait
# extensions compile in unconditionally; this flag toggles the runtime
# drain in `Machine::step`. Off through 2B.N-1; flipped unconditional
# after every peripheral migrates and the legacy walk is deleted.
event-scheduler = []

[dev-dependencies]
labwired-loader = { path = "../loader" }
