# LabWired - Firmware Simulation Platform
# Copyright (C) 2026 Andrii Shylenko
#
# This software is released under the MIT License.
# See the LICENSE file in the project root for full license information.

[package]
name = "labwired-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
# build.rs compiles the JIT hot-block WAT into wasm bytes at compile time
# so both the native (wasmtime) and browser (`js_sys::WebAssembly`) backends
# consume identical bytes. See `crates/core/build.rs` and
# `cpu/xtensa_jit/wasm_bytes.rs` (#124 Phase 4 browser-side JIT prototype).
build = "build.rs"

[build-dependencies]
# Used solely by build.rs to pre-compile the hot-block WAT into wasm bytes.
wat = "1.0"
# Used solely by build.rs to compile the native IO-Link bridge C sources when
# the `iolink-native` feature is enabled. Off by default so browser/wasm builds
# never need a C toolchain.
cc = "1.2"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
bitflags = { workspace = true }
labwired-config = { path = "../config" }
anyhow = { workspace = true }
serde_json = { workspace = true }
# bincode 1.3 (no extra wasm-bindgen deps; serde-compatible) — used by the
# `runtime_snapshot` module for binary-format mid-flight resume snapshots.
# The JSON `MachineSnapshot` stays in serde_json for the determinism gates.
bincode = "1.3"
# SHA-256 compression for the ESP32-S3 SHA accelerator model (bootloader
# image-hash verification). Used only by the esp32s3 SHA peripheral.
sha2 = { workspace = true, features = ["compress"] }
goblin = { workspace = true }
labwired-ir = { path = "../ir" }
labwired-hw-trace = { path = "../hw-trace" }
serde_yaml.workspace = true
memmap2.workspace = true
pio.workspace = true
pio-parser.workspace = true
# Optional: wasmtime is only pulled in when the `jit` feature is enabled.
# The browser crate (`labwired-wasm`) does NOT enable this feature, so
# JS/wasm builds keep their lean dependency tree.
wasmtime = { version = "45", optional = true, default-features = false, features = ["cranelift", "runtime", "std", "wat"] }

[features]
default = []
# Egress-bridge transport tests that open real localhost sockets (TCP/MQTT/HTTP).
# Off by default so the standard gate stays hermetic; run with
# `cargo test -p labwired-core --features net-tests`.
net-tests = []
# Enable end-to-end tests that build and run the examples/esp32s3-* firmware
# crates. Requires the +esp toolchain. Off by default so the standard
# workspace `cargo test` does not need the ESP toolchain installed.
esp32s3-fixtures = []
# Phase 3.2 pilot (issue #124): JIT-compile hot Xtensa basic blocks to wasm,
# run via wasmtime native, side-exit on branch. Off by default — the wasm
# build target and the standard test suite both run on the interpreter.
jit = ["dep:wasmtime"]
# Speed plan Phase 2 (#124 follow-on): ISA-agnostic universal-dispatch JIT
# framework scaffold (`crates/core/src/cpu/jit_framework/`). Pure-Rust, no
# extra deps — it carries the shared block cache, side-exit protocol,
# per-ISA frontend trait, native/browser runtime abstraction, interpreter
# fallback, and differential harness, but ZERO per-ISA codegen. Off by
# default so nothing else changes. See docs/engineering/universal-jit-framework.md.
jit-framework = []
# Phase 2B.1 (issue #192): event-driven peripheral scheduler. The
# scheduler types (`crates/core/src/sched/`) and the `Peripheral` trait
# extensions compile in unconditionally; this flag toggles the runtime
# drain in `Machine::step`. Off through 2B.N-1; flipped unconditional
# after every peripheral migrates and the legacy walk is deleted.
event-scheduler = []
# Native IO-Link path (plan 2026-06-18): compiles the real `iolinki-master` C
# stack behind a narrow bridge (`native/iolink_master_bridge.*`) into
# `labwired-core`. Off by default and never enabled by the browser crate
# (`labwired-wasm`) so wasm builds stay free of native C and GPL device-stack
# linkage. See docs/engineering/iolink-device-stack-isolation.md.
iolink-native = []
# MLX90640 round-trip decode test (plan 2026-06-20): compiles the REAL,
# unmodified Melexis MLX90640 driver (third_party/mlx90640-library) behind a
# bridge (native/mlx90640_bridge.*) that routes its I²C reads/writes into the
# LabWired MLX90640 device model. The integration test
# (tests/mlx90640_decode.rs) drives the model and asserts the real driver
# decodes per-pixel °C matching the injected thermal scene. Off by default and
# never enabled by the browser crate so wasm builds need no C toolchain.
mlx90640-decode-test = []

[[test]]
name = "mlx90640_decode"
required-features = ["mlx90640-decode-test"]

[dev-dependencies]
labwired-loader = { path = "../loader" }
svd-ingestor = { path = "../svd-ingestor" }
svd-parser = "0.14"
