# LabWired - Firmware Simulation Platform
# Copyright (C) 2026 Andrii Shylenko
#
# This software is released under the MIT License.
# See the LICENSE file in the project root for full license information.

[package]
name = "firmware-ci-fixture"
version = "0.11.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
panic-halt = "0.2"

[[bin]]
name = "firmware-ci-fixture"
path = "src/main.rs"
test = false
bench = false
