# LabWired - Firmware Simulation Platform
# Copyright (C) 2026 Andrii Shylenko
# SPDX-License-Identifier: MIT

[package]
name = "firmware-f407-demo"
version.workspace = true
edition = "2021"

[dependencies]
panic-halt = "0.2"

[[bin]]
name = "firmware-f407-smoke"
path = "src/smoke.rs"
test = false
bench = false

[[bin]]
name = "firmware-f407-i2c"
path = "src/i2c.rs"
test = false
bench = false
