# LabWired - Firmware Simulation Platform
# Copyright (C) 2026 Andrii Shylenko
#
# This software is released under the MIT License.
# See the LICENSE file in the project root for full license information.

[package]
name = "firmware-h563-io-demo"
version = "0.11.0"
edition = "2021"

[dependencies]
panic-halt = "0.2"

[[bin]]
name = "firmware-h563-io-demo"
path = "src/main.rs"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "s"
