# LabWired - Firmware Simulation Platform
# Copyright (C) 2026 Andrii Shylenko
#
# This software is released under the MIT License.

[package]
name = "firmware-l476-demo"
version.workspace = true
edition = "2021"

[dependencies]
panic-halt = "0.2"

[[bin]]
name = "firmware-l476-demo"
path = "src/main.rs"
test = false
bench = false

[[bin]]
name = "firmware-l476-l4periphs2"
path = "src/l4periphs2.rs"
test = false
bench = false

[[bin]]
name = "firmware-l476-cubemx-hal"
path = "src/cubemx_hal.rs"
test = false
bench = false

[[bin]]
name = "firmware-l476-tim1-advanced"
path = "src/tim1_advanced.rs"
test = false
bench = false

[[bin]]
name = "firmware-l476-r11"
path = "src/dma_sdmmc_exti.rs"
test = false
bench = false

[[bin]]
name = "firmware-l476-r12"
path = "src/r12.rs"
test = false
bench = false
