# LabWired - Firmware Simulation Platform
# SPDX-License-Identifier: MIT

[package]
name = "firmware-nrf52840-proximity"
version = "0.1.0"
edition = "2021"
authors = ["LabWired Team"]
license = "MIT"

# HC-SR04 ultrasonic proximity firmware for the nRF52840.
# Pulses TRIG, times the ECHO pulse, converts it to a distance, and raises an
# ALARM GPIO when the target is within the threshold. Talks raw nRF GPIO
# registers only — no LabWired APIs — so the SAME ELF runs in the simulator and
# flashes to a physical board.

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"

[[bin]]
name = "firmware-nrf52840-proximity"
path = "src/main.rs"
test = false
bench = false
